# vibe-kanban

./: CHANGES-SUMMARY.md  CHANGES-TREE.md  DEPLOYMENT.md  DOCS.md  Dockerfile  PRODUCTION-REMOVE-DATA.md  docker-compose.yaml  local-build.sh  local-remove-data.sh  package.json  pnpm-lock.yaml  production-remove-data.md  update-changes-tree.sh
crates/api-types/src/: github_app.rs  lib.rs
crates/db/src/models/: repo.rs
crates/git/: Cargo.toml
crates/git/src/: cli.rs  lib.rs
crates/local-deployment/src/: pty.rs
crates/remote/src/db/: github_app.rs
crates/remote/src/github_app/: mod.rs  service.rs
crates/remote/src/routes/: github_app.rs
crates/server/: Dockerfile  docker-entrypoint.sh
crates/server/src/: error.rs  lib.rs  repo_git_auth.rs
crates/server/src/routes/: admin.rs  mod.rs  repo.rs  terminal.rs
crates/server/src/routes/workspaces/: core.rs
crates/services/src/services/: remote_client.rs  repo.rs
services/admin/: Dockerfile  server.js
services/auth-helper/: Dockerfile  server.js
services/host-admin/: Dockerfile  server.js
