[package]
name = "git"
version = "0.1.40"
edition = "2024"

[features]
default = []
cloud = []

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
git2 = { workspace = true }
serde = { workspace = true }
tempfile = "3.21"
thiserror = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
utils = { path = "../utils" }

[dev-dependencies]
tempfile = "3.21"
